Forecast dummy layout added

--- a/components/layout/layout.module.css
+++ b/components/layout/layout.module.css
@@ -1,4 +1,5 @@
 /* background by SVGBackgrounds.com */
+/* weather icons by amCharts (https://www.amcharts.com/) */
 
 .background_day {
   background: url("/images/backgrounds/day.svg");
